[package]
name = "raw_extractor"
version = "0.1.0"
authors = ["Jean-Claude Graf <mail@jeanclaudegraf.ch>"]
edition = "2021"
description = "Extract embedded thumbnail from raw image file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
clap = { version = "4.4.12", features = ["derive"] }
rexiv2 = "0.10.0"

[[bin]]
name = "rex"
path = "src/main.rs"
